--- a/_modules/cubes/piws/parser/freesurfer.html
+++ b/_modules/cubes/piws/parser/freesurfer.html
@@ -20,7 +20,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../../../../',
-        VERSION:     '2.0.0',
+        VERSION:     '2.2.0',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -100,7 +100,7 @@
 
         <!-- info setup -->
           <p class="doc-version">
-           This documentation is for Population Imaging Web Service Cube <strong>version 2.0.0</strong>
+           This documentation is for Population Imaging Web Service Cube <strong>version 2.2.0</strong>
           </p>
         <p class="citing">
           If you use the software, please do not hesitate to 
@@ -151,7 +151,7 @@
     <span class="s2">&quot;FREESURFER&quot;</span><span class="p">]</span>
 
 <span class="n">RQL_T1</span> <span class="o">=</span> <span class="p">(</span><span class="s2">&quot;Any SC Where S is Subject, S code_in_study &#39;{0}&#39;, &quot;</span>
-          <span class="s2">&quot;S scans SC, SC in_assessment A, A timepoint &#39;{1}&#39;, &quot;</span>
+          <span class="s2">&quot;S subject_scans SC, SC in_assessment A, A timepoint &#39;{1}&#39;, &quot;</span>
           <span class="s2">&quot;SC label &#39;ADNI_MPRAGE&#39;&quot;</span><span class="p">)</span>
 
 
@@ -341,8 +341,6 @@
             <span class="n">json</span><span class="o">.</span><span class="n">dump</span><span class="p">(</span><span class="n">processings</span><span class="p">,</span> <span class="n">openfile</span><span class="p">,</span> <span class="n">indent</span><span class="o">=</span><span class="mi">4</span><span class="p">,</span> <span class="n">sort_keys</span><span class="o">=</span><span class="bp">True</span><span class="p">)</span>
 
     <span class="k">return</span> <span class="n">processings</span></div>
-
-
 </pre></div>
 
           </div>
